--- a/Student_Lesson6_PhotoGallery/index.html
+++ b/Student_Lesson6_PhotoGallery/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Peter Strouss
+    Date: April 14 2017   
     Filename: index.html
    -->
     
